Melhoria para edição em smartphones

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             <div class="caixa-conteudo">
                 <h1>manter a proporção</h1>
                 <p>Valor Base</p>
-                <input id="val1" type="text" value="0">
+                <input id="val1" type="text">
                 <p>Medida da base</p>
-                <input id="med1" type="text" value="0">
+                <input id="med1" type="text">
                 <p>Novo valor</p>
-                <input id="val2" type="text" value="0">
+                <input id="val2" type="text">
                 <p>Descontar?</p>
-                <input id="desc" type="text" value="0">
+                <input id="desc" type="text">
                 <input class="botao" id="calcular" type="button" value="Calcular">
                 <h2>Resultado</h2>
                 <p class="resultado">Se para 0 a medida é 0. Então, para 0 a medida será 0.</p>
