Refatoração de código

--- a/index.html
+++ b/index.html
@@ -31,11 +31,10 @@
                 <p class="resultado">Se para 0 a medida é 0. Então, para 0 a medida será 0.</p>
             </div>
         </section>
-        
 
         <footer>
-            <h1>Feito com <span>&hearts;</span> por:&nbsp;</h1><h1> <a href="https://github.com/JonasJF360/calculos_uteis"
-                    target="_blank">Jonas de
+            <h1>Feito com <span>&hearts;</span> por:&nbsp;</h1>
+            <h1><a href="https://github.com/JonasJF360/calculos_uteis" target="_blank">Jonas de
                     Jesus Ferreira</a></h1>
         </footer>
     </div>
